# FintelligenceAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_TESTS.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.api  Dockerfile.minimal  Dockerfile.slim  Dockerfile.ui  E2E_PROVIDER_TESTING.md  FintelligenceAI.md  README-Docker.md  README.md  README_TESTING.md  RETRIEVAL_OPTIMIZATION_SUMMARY.md  SETUP_GUIDE.md  create_js.py  demo_knowledge_ingestion.py  demo_local_mode.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.slim.yml  docker-compose.yml  env.template  phase2_completion_report.json  pyproject.toml  test_api.sh  test_e2e_runner.py  test_enhanced_retrieval_e2e.py  test_enhanced_retrieval_simple.py  test_knowledge_validation.py  test_manager.py  test_phase2.py  test_phase2_fixed.py  test_simple_validation.py  tweet_draft.md
.taskmaster/docs/: prd.txt
config/nginx/: nginx.conf
config/prometheus/: prometheus.yml
docs/: API_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  ErgoScript_Security_Guide.md  INSTALLATION.md  KNOWLEDGE_BASE.md  LOCAL_MODE_SETUP.md  QUICK_START.md  README.md  README_TESTING.md  TROUBLESHOOTING.md  mining_emission_contract.md
knowledge-base/: .knowledge-config.json  README.md  example-usage.md  github-repos.txt  urls.txt
knowledge-base/categories/examples/: .gitkeep
knowledge-base/categories/guides/: .gitkeep
knowledge-base/categories/reference/: .gitkeep
knowledge-base/categories/tutorials/: .gitkeep
knowledge-base/documents/: .gitkeep  javascript_examples.md  sample_tutorial.md  test-doc.md
knowledge-base/processed/: github_manifest.json  github_manifest_fintelligence_ai_openai-ollama.json  github_manifest_fintelligence_ai_openai.json  processed_files.txt  processed_files_fintelligence_ai_openai-ollama.txt  processed_files_fintelligence_ai_openai.txt
knowledge-base/processed/files/examples/: ergo_python_appkit_examples.md  example_advanced_nft-contract.md
knowledge-base/processed/files/tutorials/: demo_ergoscript_tutorial.md
scripts/: check_github_rate_limit.py  docker-setup.sh  ingest_knowledge.py  quick_test.sh  setup.sh  setup_github_token.py  setup_ollama_embeddings.py  start_system.sh  start_system_slim.sh  validate_knowledge_setup.py  validate_system.py
src/fintelligence_ai/: __init__.py  cli.py
src/fintelligence_ai/agents/: __init__.py  base.py  generation_agent.py  orchestrator.py  research_agent.py  types.py  validation_agent.py
src/fintelligence_ai/api/: __init__.py  agents.py  knowledge.py  main.py  optimization.py
src/fintelligence_ai/config/: __init__.py  settings.py
src/fintelligence_ai/core/: __init__.py  evaluation.py  ollama.py  optimization.py
src/fintelligence_ai/knowledge/: __init__.py  collector.py  ingestion.py  processor.py  test_knowledge_base.py
src/fintelligence_ai/rag/: __init__.py  advanced_retrieval.py  embeddings.py  factory.py  generation.py  models.py  pipeline.py  reranker.py  retrieval.py  vectorstore.py
src/knowledge-base/categories/examples/: airdrop_8b1a87bb.py
src/knowledge-base/documents/: base_airdrop_59388657.py  debug_config_8af341ec.py  env_config_cd00db9a.py  error_handler_34bc2075.py  models_96f281bb.py  multi_output_builder_c6109bac.py  recipient_manager_d7517a56.py  token_distributor_53388148.py  transaction_signer_40bce15a.py  ui_formatter_f59fbded.py  validate_address_00be2180.py  wallet_manager_d3264818.py
test-upload-directory/: README.md
test-upload-directory/code/javascript/: ergo_helpers.js
test-upload-directory/code/python/: ergo_utils.py
test-upload-directory/docs/: api_reference.json
test-upload-directory/docs/examples/: simple_lock.md
test-upload-directory/docs/tutorials/: getting_started.md
tests/: test_local_mode.py
tests/integration/: test_e2e_providers.py  test_knowledge_ingestion.py
ui/: README.md  app.html  app.js  index.html  styles.css
